--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 body{
@@ -14,9 +16,13 @@ body{
     justify-content: center;
     align-items: center;
 }
+:root{
+    --background-app: #5B5B5B;
+    --color-app: #FFFBDB;
+}
 
 main{
-    background-color: rgb(97, 122, 134);
+    background-color: var(--background-app);
     width: 29%;
     height: 57%;
     border-radius: 7px;
@@ -25,16 +31,20 @@ main{
 
 fieldset{
     border: none;
-    color: rgb(4, 4, 4);
+    color: var(--color-app);
 
     width: 100%;
     padding: 0 20px 0 20px;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
 }
-
+legend{
+    text-align: center;
+    font-size: xx-large;
+    margin-bottom: 18px;
+}
 input, button{
     width: 100%;
     border: none;
@@ -69,9 +79,15 @@ label{
     flex-direction: column-reverse;
 }
 
+
+button:hover{
+    background-color: rgb(234, 54, 132);
+    transition: background-color 140ms linear;
+}
+
 /* Animação: movimento horizontal para tags h2 */
 input:focus ~ h2{
-    transform: translateX(45%);
+    transform: translateX(45%) rotate(1.7deg);
 
     transition: transform 340ms cubic-bezier(0.175, 0.885, 0.32, 1.775);
 }
