--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,31 +5,40 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
+:root{
+    --background-body: linear-gradient(45deg, #EDEDFF, #9292FF, #5d5dd2, #4949FF); 
+    --background-app: #414177;
+    --color-app: #C8C8FF;
+    --background-hover-button: #42ebebb6;
+}
 
 body{
+    background-image: var(--background-body);
+    /* background-image: url('../IMGs/calculator-icon-favicon--icons8.png'); */
     height: 100vh;
     width: 100%;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    background-size: 300%;
+    animation: moveBackground 8s alternate linear infinite;
 
-    background-image: linear-gradient(rgb(23, 22, 22), rgb(25, 22, 19));
+    /* background-image: linear-gradient(rgb(23, 22, 22), rgb(25, 22, 19)); */
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
-:root{
-    --background-app: #5B5B5B;
-    --color-app: #FFFBDB;
-}
+
 
 main{
     background-color: var(--background-app);
-    width: 29%;
-    height: 57%;
+    width: 29.5%;
+    height: 59%;
     border-radius: 7px;
     padding-top: 16px;
 }
 
-fieldset{
+fieldset, #output{
     border: none;
     color: var(--color-app);
 
@@ -81,8 +90,14 @@ label{
 
 
 button:hover{
-    background-color: rgb(234, 54, 132);
+    background-color: var(--background-hover-button);
     transition: background-color 140ms linear;
+}
+
+
+
+#output{
+    margin: 25px 0 5px 0;
 }
 
 /* Animação: movimento horizontal para tags h2 */
@@ -90,4 +105,38 @@ input:focus ~ h2{
     transform: translateX(45%) rotate(1.7deg);
 
     transition: transform 340ms cubic-bezier(0.175, 0.885, 0.32, 1.775);
+}
+
+/* Animação: movimentação background */
+@keyframes moveBackground {
+    0%{
+        background-position: 0 45deg;
+    } 100%{
+        background-position: 100%;
+    }
+}
+
+/* Animação: Resultado IMC sendo digitado */
+
+.typing{
+    animation: typeIMCResult 2s linear forwards, border 50ms linear infinite;
+    height: 25px;
+    background-color: red;
+}
+
+
+@keyframes typeIMCResult{
+    from{
+        width: 0px;
+    } to{
+        width: 100%;
+    }
+}
+
+@keyframes border{
+    from{
+        border-right: 1px solid white;
+    } to{
+        border-right: 1px solid transparent;
+    }
 }
